--- a/index.html
+++ b/index.html
@@ -212,17 +212,22 @@
 
                <div class="col-md-6 foot1" >
                    <h2>Danielle Motian</h2>
-
+                    <i>Director Marketing</i>
                    <h4>0700559991</h4>
 
                    
                    
                </div>
                <div class="col-md-6">
+                <h2>Jaspeer</h2>
+
+                <i>Director production</i>
+                <h4>0733910298</h4>
 
                </div>
 
                </div>
+                ©Jaz Art 2021 | Terms & Conditions Aplly
            </div>
        </footer>
     </div>
